dependencies added , needs to test it through firebase

--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "main": "firefly-file.js",
   "dependencies": {
+    "@polymer/app-storage": "^3.0.2",
     "@polymer/iron-component-page": "^4.0.1",
     "@polymer/paper-fab": "^3.0.0",
     "@polymer/paper-input": "^3.0.0",
-    "@polymer/polymer": "^3.0.0"
+    "@polymer/polymer": "^3.0.0",
+    "firebase": "^6.3.1"
   },
   "devDependencies": {
     "@polymer/iron-demo-helpers": "^3.0.0",
