--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "description": "a visual component which  allows the user to load files  into Firebase Storage.",
-  "name": "@polymer/firefly-file",
-  "version": "",
+  "name": "@firefly-elements/firefly-file",
   "resolutions": {
     "inherits": "2.0.3",
     "samsam": "1.1.3",
@@ -21,5 +20,25 @@
     "@polymer/iron-demo-helpers": "^3.0.0",
     "wct-browser-legacy": "^1.0.1",
     "@webcomponents/webcomponentsjs": "^2.0.0"
-  }
+  },
+  "version": "0.5.0",
+  "directories": {
+    "test": "test"
+  },
+  "scripts": {
+    "test": "mocha"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/firefly-elements/firefly-file.git"
+  },
+  "keywords": [
+    "web-components"
+  ],
+  "author": "Mark Fortner, Ishan Subedi, Marko Ignjatovic, Suyash Adhikary",
+  "license": "BSD-3-Clause",
+  "bugs": {
+    "url": "https://github.com/firefly-elements/firefly-file/issues"
+  },
+  "homepage": "https://github.com/firefly-elements/firefly-file#readme"
 }
